# AICoCook

./: .setup_cache.json  JSON  README.md  README_zh.md  aicook.bat  firststart.bat  index.html  package-lock.json  package.json  pyproject.toml  recipes.json  setup.py  user_dict.txt  vite.config.js
aire-backend/: README.md  README_zh.md  alembic.ini  env.example  requirements.txt
aire-backend/app/: __init__.py  database.py  dependencies.py  main.py
aire-backend/app/api/: __init__.py
aire-backend/app/core/: __init__.py  ai_service.py  celery.py  config.py  exceptions.py  logging.py  security.py  vector_db.py
aire-backend/app/models/: __init__.py  diet_profile.py  meal_plan.py  recipe.py  user.py
aire-backend/app/schemas/: __init__.py  ai.py  diet_profile.py  meal_plan.py  recipe.py  user.py
aire-backend/scripts/: import_data.py
data/: aire_local.db
data/embeddings/: id_mapping.pkl  recipe_index.faiss  recipe_metadata.pkl
scripts/: generate_investor_doc.py  initialize_db.py  test_dependencies.py
searchbackend/: README.md  README_zh.md  main.py  simple_search.py
src/: App.vue  main.js
src/api/: aiMealCoachService.js  aiRecipeSearchService.js  chatHistoryService.js  enhancedSearchService.js  fallbackSearchService.js  fixedRecipeSearchService.js  ragService.js  recipeService.js  userService.js
src/components/: GlassCard3D.vue  GradientButton.vue  RecipeCard.vue  RecipeMarquee.vue  SelectableItem.vue
src/data/: cookwares.js  food_nutrition.json  ingredients.js  recipe-steps.js  recipes.csv  recipes.js
src/locales/: en.js  zh.js
src/router/: index.js
src/scripts/: convertRecipes.js  package.json
src/utils/: constants.js  csvToJson.js  dataCache.js  helpers.js  types.js
src/views/: AiCoach.vue  AiRecommend.vue  FoodGallery.vue  Home.vue  LimitedConditions.vue  MyRecipes.vue  RandomRecipe.vue  RecipeDetail.vue
userdata/: chat_history.json
(+19 files in other folders)
