[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-cook"
version = "0.1.0"
description = "AI Cook - Intelligent Recipe Assistant with Simple and Reliable Search Engine"
authors = ["AI Cook Team <team@aicook.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
# Frontend-related, managed by npm, listed here for reference
# vue = "^3.2.13"
# vite = "^2.9.9"

# Shared dependencies
# (none currently)

# AI-RE-Backend (aire-backend) dependencies
alembic = "^1.12.1"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
celery = "^5.3.4"
redis = "^5.0.1"

# AI & ML dependencies
google-generativeai = "^0.3.0"
openai = "^1.30.1"
langchain = "^0.2.1"
langchain-google-genai = "*"
transformers = "^4.41.2"
sentence-transformers = "^2.2.2"

# Vector Database
faiss-cpu = "^1.7.4"

# Data handling
pandas = "^2.1.4"
numpy = "^1.26.0"
pydantic = "^2.5.0"
email-validator = "*"

# HTTP Client & Streaming
httpx = "^0.27.0"
aiohttp = "^3.9.1"
requests = "^2.31.0"
python-multipart = "^0.0.6"

# Monitoring & Logging
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
python-json-logger = "^3.3.0"

# Utilities
tqdm = "^4.66.1"
pillow = "^10.1.0"
python-slugify = "^8.0.1"
unstructured = {extras = ["local-inference"], version = "*"}
pdfminer-six = "^20231228"
click = "^8.1.0"

# New Search Backend (searchbackend) dependencies
jieba = "^0.42.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
Faker = "^26.0.0"

[tool.poetry.scripts]
start-backend = "searchbackend.main:start"
